# rocket-testing

./: .gitignore  Cargo.toml  LICENSE  README.md  Rocket.toml  build.rs
.github/workflows/: rust.yml
migrations/2021-04-02-151427_create_posts/: up.sql
migrations/2021-04-06-171016_create_users/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/auth/: auth.rs  crypto.rs
src/cors/: cors.rs  mod.rs
src/db/: migration.rs  mod.rs  posts.rs  users.rs
src/routes/: db.rs  mod.rs  test.rs
src/utils/: path.rs
tests/integration/: Rocket.postman_collection.json
